# kafka_neo4j_experiment

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  admin.py  app.py  configs.py  consumer.py  db.py  docker-compose.yml  example-connector.json  loader.py  neo4j-connector.json  producer.py  pyproject.toml  schema.py
app/: admin.py  consumer.py  db.py  loader.py  producer.py  schema.py  server.py  settings.py
ops/: Dockerfile  docker-compose.yml
src/gleif_importer/: admin.py  app.py  consumer.py  db.py  loader.py  producer.py  schema.py  settings.py
