[tool.poetry]
name = "gleif_importer"
version = "0.1.0"
description = ""
authors = ["Ratul Minhaz <minhaz.ratul@gmail.com>"]
readme = "README.md"
packages = [{include = "gleif_importer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.2.0"
flask = "^2.3.2"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"
httpie = "^3.2.2"
kafka-python = "^2.0.2"
neo4j = "^5.11.0"
orjson = "^3.9.4"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.3"
smart-open = "^6.3.0"
aiohttp = {extras = ["speedups"], version = "^3.8.5"}
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
jupyter = "^1.0.0"
pre-commit = "^3.3.3"
detect-secrets = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
